Cleaning Up My Example Project
getting rid of my versions of the bicycle contrib classes so I can start
fresh and approach the problem via using the bicycle contrib as a
dependancy instead.

I saved my code in a local folder on my computer called
"ClarissasCodeClipboard", and so that I can reference it while I'm
trying this new depandancy approach.

I might end up needing to create my own classes anyway, if the bicycle
contrib doesn't allow enough modularity.

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
 			<artifactId>matsim</artifactId>
 			<version>${matsim.version}</version>
 		</dependency>
+		
+		<dependency>
+			<!-- This is the matsim "bicycle": -->
+			<groupId>org.matsim.contrib</groupId>
+			<artifactId>bicycle</artifactId>
+			<version>${matsim.version}</version>
+		</dependency>
 
 		<dependency>
 			<!-- Include the JUnit testing library.  Not transitive. -->
