--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<properties>
 	  <!-- release> -->
-		<matsim.version>0.11.0-SNAPSHOT</matsim.version>
+		<matsim.version>12.0-SNAPSHOT</matsim.version>
 
 	  <!--weekly "release":-->
 	  <!--<matsim.version>0.11.0-2019w01-SNAPSHOT</matsim.version>-->
@@ -67,6 +67,12 @@
 			<type>test-jar</type>
 			<version>${matsim.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.matsim.contrib</groupId>
+			<artifactId>bicycle</artifactId>
+			<version>12.0-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 
 		<!--to get ExamplesUtils. commented out since it is another dependency, but in general this is recommended. -->
